# airflow-spark-jobs

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
dags/: word_count_dag.py
spark/data/: ebook
spark/jobs/: word_count_job.py
word-count/: Makefile  README.md  pyproject.toml
word-count/data_transformations/: hello_spark.py  word_count.py
word-count/jobs/: hello_spark.py  word_count.py
word-count/resources/: ebook
word-count/tests/: test_hello_spark.py  test_word_count.py
