[tool.poetry]
name = "word-count"
version = "0.1.0"
description = ""
authors = ["firasesbai <firasesbai@gmail.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^1.2.4"
pyarrow = "^4.0.0"
pyspark = "^3.1.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
